--- a/webapp/client/app/partials/test-suite-runs-list.html
+++ b/webapp/client/app/partials/test-suite-runs-list.html
@@ -3,7 +3,7 @@
 
   <ul>
     <li ng-repeat="run in runs">
-      <a href="#/jobs/{{run.jobId}}/runs/{{run.runId}}">
+      <a href="#/suites/{{run.suiteId}}/runs/{{run.runId}}">
         {{run.timestamp}}
       </a>
       <p>commit: {{run.commit}}</p>
