--- a/webapp/src/main/webapp/app/partials/particular-run.html
+++ b/webapp/src/main/webapp/app/partials/particular-run.html
@@ -1,10 +1,36 @@
+<a href="#/suites">Back to test suite list</a> <br />
+<a ng-click="back()">Back to test suite runs list</a>
 <h1>Job run</h1>
-<div>
 
-  <ul>
-    <!--<li ng-repeat="comparison in comparisons">-->
-    	<img src="http://localhost:8080/modeshape-rest/sample/default/binary/redrose.jpg/jcr%3acontent/jcr%3adata" style="width: 300px; height: 200px">
-    <!--</li>-->
-  </ul>
-
-</div>
+<ul style="list-style-type: none;">
+  <li ng-repeat="comparisonResult in comparisonResults">
+    <div class="test-info">
+      <b>Test class:</b> {{comparisonResult.testClassName}}<br />
+      <b>Test name:</b> {{comparisonResult.testName}}<br />
+    </di>
+    <carousel>
+      <slide active="active">
+        <img src="{{comparisonResult.patternUrl}}" style="margin:auto;">
+        <div class="carousel-caption">
+          <h4>PATTERN</h4>
+        </div>
+      </slide>
+      <slide>
+        <img src="{{comparisonResult.sampleUrl}}" style="margin:auto;">
+        <div class="carousel-caption">
+          <h4>SAMPLE</h4>
+        </div>
+      </slide>
+      <slide>
+        <img src="{{comparisonResult.diffUrl}}" style="margin:auto;">
+        <div class="carousel-caption">
+          <h4>DIFF</h4>
+        </div>
+      </slide>
+    </carousel>
+    <div class="centre">
+      <a ng-click="rejectPattern(comparisonResult.diffID)" class="btn btn-small btn-danger">Reject pattern</a>
+      <a ng-click="rejectSample(comparisonResult.diffID)" class="btn btn-small btn-primary">Reject sample</a>
+    </div>
+ </li>
+</ul>
