--- a/webapp/src/main/webapp/app/partials/test-suite-list.html
+++ b/webapp/src/main/webapp/app/partials/test-suite-list.html
@@ -1,5 +1,4 @@
-<div>
-  <div>
+<div class="span6">
     <div>
 
       Search: <input ng-model="query">
@@ -9,14 +8,19 @@
       </select>
 
     </div>
-    <div>
 
-      <ul>
-        <li ng-repeat="suite in suites | filter:query | orderBy:orderProp">
-          <a href="#/suites/{{suite.testSuiteID}}">{{suite.name}}</a>
-        </li>
-      </ul>
-
-    </div>
-  </div>
+    <table class="table table-striped table-condensed">
+        <thead>
+        <tr>
+            <th style="min-width: 80px;">Test suite name</th>
+            <th style="width:20px;"> </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="suite in suites | filter:query | orderBy:orderProp">
+            <td><a href="#/suites/{{suite.testSuiteID}}">{{suite.name}}</a></td>
+            <td><a ng-click="deleteSuite(suite.testSuiteID)" class="btn btn-small btn-danger">delete</a></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
