not implemented used instead of number of failed functional tests

--- a/webapp/src/main/webapp/app/partials/test-suite-runs-list.html
+++ b/webapp/src/main/webapp/app/partials/test-suite-runs-list.html
@@ -14,8 +14,8 @@
             <td><a href="#/suites/{{particularSuite.testSuiteID}}/runs/{{run.testSuiteRunID}}">
                 {{timestampToDate(run.timestamp)}}</a>
             </td>
-            <td>{{run.projectRevision}}</td>
-            <td>{{run.numberOfFailedFunctionalTests}}</td>
+            <td>not-implemented-yet</td>
+            <td>not-implemented-yet</td>
             <td>{{run.numberOfFailedComparisons}}</td>
             <td><a ng-click="deleteSuiteRun(run.testSuiteRunID)" class="btn btn-small btn-danger">delete</a></td>
         </tr>
